<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Favorite Places</string>
    <string name="locations_title">Locations</string>
    <string name="settings">Settings</string>

    <!-- drop-down action menu for locations_main page to show locations_main as map -->
    <string name="default_view">@string/list_view</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string-array name="locations_navigation_view">
        <item>@string/list_view</item>
        <item>@string/map_view</item>
    </string-array>
    <string name="add_this_location">Add Current</string>
    <string name="add_external_location">Add External</string>
    
    <!-- drop-down action menu for location details -->
    <string name="edit_location_details">Edit</string>
    <string name="save_location_details">Save</string>
    <string name="delete_location">Delete</string>
    <string name="get_directions">Directions</string>
    <string name="add_event">Add</string>
    <string name="delete_event">Delete</string>
    <string name="cancel_location_details">Cancel</string>

    <!-- tab titles -->
    <string name="tab_details">Details</string>
    <string name="tab_map">Map</string>
    <string name="tab_events">Events</string>

    <!-- category list -->
    <string name="categories">Categories</string>
    <string name="selectall">Select All</string>
    <string name="newcategory">Add New Category</string>
    <string name="deletecategory">Delete Selected</string>
    <string name="samplecategory">Category Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- current location strings -->
    <string name="currentlocation_title">Add Current Location</string>

    <!-- external location strings -->
    <string name="invalid_search_string">Please Provide a Valid Search Expression</string>
    <string name="close">Close</string>

    <!-- search maps strings -->
    <string name="externallocation_title">Search Locations</string>
    <string name="default_search_text">Search address or location</string>

    <!-- preferences strings -->
    <string name="preference_view_id">List Preference ID</string>
    <string name="preference_home_address_id">Home Address ID</string>

    <!-- maps -->
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="no_maps_msg">There are no map clients installed</string>
    <string name="PLACE_API_BASE_URL">https://maps.googleapis.com/maps/api/place/search/json</string>

    <!-- detail information -->
    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="phone_label">Phone</string>
    <string name="website_label">Website</string>
    <string name="hours_label">Hours</string>
    <string name="comments_label">Comments</string>
    <string name="PLACE_DETAIL_API_URL">https://maps.googleapis.com/maps/api/place/details/json</string>
	<string name="MY_API_KEY">AIzaSyAKb3QnPVarVnI8D9Fqh8qTuh2nVSosQd8</string>
	
    <!-- delete alert -->
    <string name="confirm_delete">Are you sure you wish to delete: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- events -->
    <string name="default_title">New Event for</string>
    <string name="default_description">Enter event details here.\nWebsite:</string>

</resources>
