<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/edit_location_details"
          android:icon="@drawable/content_edit"
          android:title="@string/edit_location_details"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/save_location_details"
          android:icon="@drawable/content_save"
          android:title="@string/save_location_details"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/cancel_location_details"
          android:icon="@drawable/navigation_cancel"
          android:title="@string/cancel_location_details"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/delete_location"
          android:icon="@drawable/content_discard"
          android:title="@string/delete_location"
          android:showAsAction="ifRoom|withText"/>
</menu>